--- a/Assets/UI/HealthBar.uxml
+++ b/Assets/UI/HealthBar.uxml
@@ -1,3 +1,3 @@
 <engine:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:engine="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <engine:ProgressBar value="40" title="40/60" name="HealthBar" style="position: absolute; width: 300px; top: -20px; left: -150px;" />
+    <engine:ProgressBar value="0" title="0/0" name="HealthBar" high-value="60" style="position: absolute; width: 300px; top: -20px; left: -150px;" />
 </engine:UXML>
