--- a/Assets/UI/HealthBar.uxml
+++ b/Assets/UI/HealthBar.uxml
@@ -1,3 +1,4 @@
 <engine:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:engine="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <engine:ProgressBar value="0" title="0/0" name="HealthBar" high-value="60" style="position: absolute; width: 300px; top: -20px; left: -150px;" />
+    <Style src="project://database/Assets/UI/USS/HealthBarUSS.uss?fileID=7433441132597879392&amp;guid=5f1941bd859ff2c4eaffdede860ea7c3&amp;type=3#HealthBarUSS" />
+    <engine:ProgressBar value="43.7" title="0/0" name="HealthBar" high-value="60" style="position: absolute; width: 300px; top: -20px; left: -150px; -unity-font-style: bold-and-italic; font-size: 20px; color: rgb(0, 0, 0); -unity-text-outline-color: rgba(0, 0, 0, 0); -unity-text-outline-width: 0;" />
 </engine:UXML>
